Fix group view css to make things more tidy and aligned

--- a/frontend/src/components/GroupView/RightView/GroupTasksContainer.module.scss
+++ b/frontend/src/components/GroupView/RightView/GroupTasksContainer.module.scss
@@ -1,9 +1,12 @@
+@import '../groupview-sizes.scss';
+
 .GroupTasksContainer {
   display: flex;
   flex-direction: row;
   overflow-y: hidden;
   overflow-x: auto;
   width: 100%;
+  height: $group-task-row-content-height;
 }
 
 .FlexibleRow {
