--- a/frontend/src/components/GroupView/groupview-sizes.scss
+++ b/frontend/src/components/GroupView/groupview-sizes.scss
@@ -10,3 +10,5 @@ $taskqueue-height: 60vh;
 $peoplelist-height: 40vh;
 $addmember-height: 40px;
 $leavegroup-height: 32px;
+
+$group-task-row-content-height: 160px;
